css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Import partials from `sass_dir` (defaults to `_sass`)
@import
	{% if site.bootwatch %}
		"bootswatch/{{site.bootwatch | downcase}}/variables",
	{% endif %}

	"bootstrap",

	{% if site.bootwatch %}
		"bootswatch/{{site.bootwatch | downcase}}/bootswatch",
	{% endif %}

	"syntax-highlighting",
	"typeahead"
;

html {
	position: relative;
	min-height: 100%;
}
body {
	padding-top: $navbar-height + $navbar-margin-bottom;
	margin-bottom: 46px;
}

.navbar-brand{
	img{
		margin: -$navbar-padding-vertical 0;
		height: $navbar-height;
		padding: 10px 0;
	}
}

.header-container {
	background: url('../img/background-min.png') no-repeat 50% 0;
	color: #EEE;
	background-color: rgba(0, 0, 0, 0.5);
	background-blend-mode: darken;

	h1 {
		color: #EEE;
	}
	// background-attachment: fixed;
	background-size: cover;
	background-position: center 36%;
	margin-top: -37px;
}

.body-container {
	background: url('../img/incarnatesystem-min.png') no-repeat 50% 0;
	color: #EEE;
	background-color: rgba(0, 0, 0, 0.5);
	background-blend-mode: darken;

	h1 {
		color: #EEE;
	}
	// background-attachment: fixed;
	background-size: cover;
	background-position: center 36%;
	margin-top: -37px;
}

.navbar-container {
	font-size: 16px;
}

.page-content {
	padding-bottom: 20px;
}

.footer {
	position: absolute;
	bottom: 0;
	width: 100%;
	height: 46px;
	padding-top: 10px;
	background-color: $gray-lighter;
	color: $gray-dark;
}

.post-list-container {
	li a.active {
		font-weight: bold;
	}
}

*[id]:before {
	display: block;
	content: " ";
	margin-top: -75px;
	height: 75px;
	visibility: hidden;
}

.navbar-form .has-feedback .form-control-feedback{
	top:10px
}

// Custom CSS

// nav
.navbar-default {
	background-color: rgba(39, 39, 39, 0.95);
}
.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
	color:#EEE;
	background-color: #323232;
}

// body
body {
	background-color: rgba(39, 39, 39, 0.95);
}
hr {
	border-top: 1px solid#EEE;
}
blockquote {
	border-left-color:rgba(255, 255, 255, 0.75)
}

// links
a {
	color: #c7254e;
}
a:hover, a:focus {
	color: #c7254e;
}

// h1
.page-content h1 {
	text-transform: uppercase;
}
.header-container h1 {
	text-transform: capitalize;
}
.body-container h1 {
	text-transform: capitalize;
}

// col4
.col-sm-4 a {
	color:#fff;
	text-decoration: none;
}
.col-sm-4 a:hover {
	color: #fff;
	text-decoration: underline;
}
.col-sm-4 a:visited {
	color:#fff;
	text-decoration: none;
}

// col6
.col-sm-6 a {
	color:#fff;
	text-decoration: none;
}
.col-sm-6 a:hover {
	color: #fff;
	text-decoration: underline;
}
.col-sm-6 a:visited {
	color:#fff;
	text-decoration: none;
}

// button
.btn-default {
	color: #111;
	background-color:rgba(255, 255, 255, 0.75);
}
.btn-default:hover {
	color: #111;
	background-color:rgba(255, 255, 255, 0.75);
	box-shadow: 0 0 5px #c7254e;
}

